colang-cli/tests/samples/features/local-variables/compile_error/variable_initializer_wrong_type.co
fun main() {
  var x: bool = 42;
}
